<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audioid</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="new_patient">New patient</string>
    <string name="load_patient">Load patient</string>
    <string name="exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_get_patient_data_menu">GetPatientDataMenu</string>
    <string name="give_login">Give new login</string>
    <string name="load_login">Create new</string>
    <string name="back_to_menu">Return</string>
    <string name="title_activity_patient_menu">PatientMenu</string>
    <string name="pure_tone_audiometry">Pure Tone Audiometry</string>
    <string name="uncomfortable_listening_level">Uncomfortable Listening Level</string>
    <string name="title_activity_load_patient_data_menu">LoadPatientDataMenu</string>
    <string name="title_activity_pt">PTA</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="vol_up">Volume up</string>
    <string name="vol_down">Volume down</string>
    <string name="title_activity_ucl">UCL</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="give_x">Give x</string>
    <string name="give_y">Give y</string>
    <string name="hear">Hear</string>
    <string name="cant_hear">Can\'t hear</string>
    <string name="hearing_limit">Hearing limit</string>
    <string name="too_loud">Too loud</string>
    <string name="comfortable_limit">Comfortable limit</string>
    <string name="comfortable">Comfortable</string>
    <string name="title_activity_ptaand_ucl">PTAandUCL</string>
    <string name="show_history">History</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_show_result">ShowResult</string>

</resources>
