<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PTA" >
    
    <TextView
        android:id="@+id/StepsToEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerInParent="true"/>
    
    <Button
        android:id="@+id/Hear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hear"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:onClick="hear"
        android:layout_below="@id/StepsToEnd"/>
    
    <RelativeLayout
        android:id="@+id/HearingPlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/StepsToEnd"/>
    
    <Button
        android:id="@+id/HearingLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hearing_limit"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/Hear"
        android:onClick="hearingLimit"/>
    
    <Button
        android:id="@+id/CantHear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_hear"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/HearingLimit"
        android:onClick="cantHear"/>

    <Button
        android:id="@+id/BackToMenuButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/CantHear"
        android:onClick="getBack"/>
    
</RelativeLayout>
