<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PatientMenu" >
    
    <Button
        android:id="@+id/runPTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pure_tone_audiometry"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:onClick="runPTA"/>
    
    <TextView
        android:id="@+id/PatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:layout_above="@id/runPTA"/>

    <ImageView
        android:id="@id/menu_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sluchawki_menu"
        android:layout_above="@id/PatientName"/>
    
    <Button
        android:id="@+id/runUCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uncomfortable_listening_level"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:onClick="runUCL"
        android:layout_below="@id/runPTA"/>
    
    <Button
        android:id="@+id/showHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_history"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:onClick="showHistory"
        android:layout_below="@id/runUCL"/>
    
    <Button
        android:id="@+id/BackToMenuButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/showHistory"
        android:onClick="getBack"/>
    
</RelativeLayout>
