<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
       
     <Button
         android:id="@+id/LoadPatientButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/load_patient"
         android:textSize="30sp"
         android:onClick="loadPatientData"/>
     
     <Button
        android:id="@+id/NewPatientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_patient" 
        android:textSize="30sp"
        android:layout_above="@id/LoadPatientButton"
        android:layout_centerInParent="true"
        android:onClick="getPatientData"/>
     
     <Button
        android:id="@+id/ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="30sp"
        android:layout_below="@id/LoadPatientButton"
        android:layout_centerInParent="true"
        android:onClick="exit"/>
     
     <ImageView 
        android:id="@+id/menu_image"
   		android:src="@drawable/sluchawki_menu"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_above="@id/NewPatientButton"
         />
    
</RelativeLayout>
