<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GetPatientDataMenu" >
    
     <Button
        android:id="@+id/NewLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_login"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:onClick="createNewPatient" />
    
    <EditText
        android:id="@+id/GiveLoginTextArea"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/give_login"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_above="@id/NewLoginButton"/>
     
     <Button
        android:id="@+id/BackToMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/NewLoginButton"
        android:onClick="getBack"/>

     <ImageView 
        android:id="@id/menu_image"
   		android:src="@drawable/sluchawki_menu"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_above="@id/GiveLoginTextArea"
         />
     
</RelativeLayout>
